"MODULE.bazel rules part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "net.fabricmc:tiny-remapper:0.12.1",
        "net.fabricmc:mapping-io:0.8.0",
        "net.fabricmc:mapping-io-extras:0.8.0",
        "net.fabricmc:access-widener:2.1.0",
        "org.ow2.asm:asm:9.9.1",
        "org.ow2.asm:asm-commons:9.9.1",
        "org.vineflower:vineflower:1.11.2",
        "com.fasterxml.jackson.core:jackson-core:2.20.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.20",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "de.swiesend:secret-service:2.0.1-alpha",
        "ch.qos.logback:logback-classic:1.5.23",
        "com.github.mizosoft.methanol:methanol:1.9.0",
        "net.java.dev.jna:jna:5.18.1",
        "net.java.dev.jna:jna-platform:5.18.1",
        "com.palantir.javapoet:javapoet:0.9.0",
        "com.squareup:kotlinpoet-jvm:2.2.0",
        "com.google.jimfs:jimfs:1.3.1",
        "com.github.ajalt.clikt:clikt-jvm:5.0.3",
    ],
)
