"MODULE.bazel rules part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "net.fabricmc:tiny-remapper:0.12.1",
        "net.fabricmc:mapping-io:0.8.0",
        "net.fabricmc:mapping-io-extras:0.8.0",
        "net.fabricmc:class-tweaker:0.2",
        "org.ow2.asm:asm:9.9.1",
        "org.ow2.asm:asm-commons:9.9.1",
        "org.vineflower:vineflower:1.11.2",
        "com.fasterxml.jackson.core:jackson-core:2.20.1",
        "com.fasterxml.jackson.core:jackson-annotations:2.20",
        "com.fasterxml.jackson.core:jackson-databind:2.20.1",
        "de.swiesend:secret-service:2.0.1-alpha",
        "ch.qos.logback:logback-classic:1.5.23",
        "com.github.mizosoft.methanol:methanol:1.9.0",
        "net.java.dev.jna:jna:5.18.1",
        "net.java.dev.jna:jna-platform:5.18.1",
        "com.palantir.javapoet:javapoet:0.9.0",
        "com.squareup:kotlinpoet-jvm:2.2.0",
        "com.google.jimfs:jimfs:1.3.1",
        "com.github.ajalt.clikt:clikt-jvm:5.0.3",
        "info.picocli:picocli:4.7.7",
        "info.picocli:picocli-codegen:4.7.7",
        "org.apache.maven.resolver:maven-resolver-api:2.0.14",
        "org.apache.maven.resolver:maven-resolver-spi:2.0.14",
        "org.apache.maven.resolver:maven-resolver-util:2.0.14",
        "org.apache.maven.resolver:maven-resolver-connector-basic:2.0.14",
        "org.apache.maven.resolver:maven-resolver-transport-apache:2.0.14",
        "org.apache.maven.resolver:maven-resolver-transport-file:2.0.14",
        "org.apache.maven.resolver:maven-resolver-impl:2.0.14",
        "org.apache.maven:maven-resolver-provider:4.0.0-rc-5",
        "org.slf4j:slf4j-api:2.0.16",
        "org.eclipse.sisu:org.eclipse.sisu.inject:0.9.0.M4",
        "com.google.inject:guice:6.0.0",
        "javax.inject:javax.inject:1",
        "org.lwjgl:lwjgl:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-macos-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl:jar:natives-windows-x86:3.3.3",
        "org.lwjgl:lwjgl-stb:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux-arm32:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-linux-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-macos:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-macos-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows-arm64:3.3.3",
        "org.lwjgl:lwjgl-stb:jar:natives-windows-x86:3.3.3",
        "io.github.classgraph:classgraph:4.8.184",
        "at.yawk.lz4:lz4-java:1.10.3",
        "org.apache.commons:commons-compress:1.28.0",
        "org.antlr:antlr4:4.13.2",
        "org.antlr:antlr4-runtime:4.13.2",
    ],
)
