"MODULE.bazel TouchController part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.4.0",
        "cafe.adriel.voyager:voyager-navigator-desktop:1.1.0-beta03",
        "cafe.adriel.voyager:voyager-screenmodel-desktop:1.1.0-beta03",
    ],
)
