load("@rules_rust_mdbook//:defs.bzl", "mdbook_toolchain")

mdbook_toolchain(
    name = "mdbook_toolchain_impl",
    mdbook = "@mdbook_deps//:mdbook__mdbook",
)

toolchain(
    name = "mdbook_toolchain",
    toolchain = ":mdbook_toolchain_impl",
    toolchain_type = "@rules_rust_mdbook//:toolchain_type",
)
