load("@rules_java//java:java_library.bzl", "java_library")
load("//rule:merge_library.bzl", "kt_merge_library")

java_library(
    name = "client_resources",
    resource_strip_prefix = "armorstand/client/resources",
    resources = glob(["resources/**"]),
    visibility = ["//armorstand:__subpackages__"],
)

kt_merge_library(
    name = "client",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    merge_deps = [
        "//armorstand/main",
        "//armorstand/expect_client",
    ],
    visibility = ["//armorstand:__subpackages__"],
    exports = [
        "//armorstand/expect_client",
        "//armorstand/main",
    ],
    deps = [
        "//:kotlin_serialization",
        "//armorstand/game:remapped_client_access_widened_named",
        "//blazerod/model/model-base",
        "//blazerod/model/model-formats",
        "//blazerod/model/model-loader",
        "//blazerod/render/api/animation",
        "//blazerod/render/api/event",
        "//blazerod/render/api/loader",
        "//blazerod/render/api/refcount",
        "//blazerod/render/api/render",
        "//blazerod/render/api/resource",
        "//game/1.21.8:game_client_libraries",
        "@maven//:com_illposed_osc_javaosc_core",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_core_jvm",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json_jvm",
        "@maven_fabric_1_21_8//:io_github_llamalad7_mixinextras_fabric",
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
        "@maven_fabric_1_21_8//:org_ow2_asm_asm",
    ],
)
