load("//rule:merge_library.bzl", "kt_merge_library")
load("//rule:remap_jar.bzl", "remap_jar")

remap_jar(
    name = "remapped_deps",
    classpath = ["//game/1.21.8:game_client_intermediary"],
    from_namespace = "intermediary",
    inputs = [
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_api_fabric_api",
    ],
    mapping = "//game/1.21.8:game_merged_mapping",
    mixin = True,
    remap_transitive_deps = True,
    remove_jar_in_jar = True,
    to_namespace = "named",
    visibility = ["//armorstand:__subpackages__"],
)

kt_merge_library(
    name = "fabric_main_unmapped",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    associates = [
        "//armorstand/main",
    ],
    merge_deps = [
        "//armorstand/main",
    ],
    resource_strip_prefix = "armorstand/fabric/resources",
    resources = glob(
        include = ["resources/**"],
        allow_empty = True,
    ),
    visibility = ["//armorstand:__subpackages__"],
    exports = [
        "//armorstand/main",
    ],
    deps = [
        ":remapped_deps",
        "//game/1.21.8:game_client_libraries",
        "//game/1.21.8:game_client_named",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_loader",
    ],
)
