load("@bazel_skylib//rules:expand_template.bzl", "expand_template")
load("@rules_java//java:defs.bzl", "java_library")
load("//armorstand:properties.bzl", "armorstand_version", "license")
load("//rule:merge_library.bzl", "kt_merge_library")

java_library(
    name = "main_resources",
    resource_strip_prefix = "armorstand/main/resources",
    resources = glob(
        ["resources/**"],
        allow_empty = True,
    ),
    visibility = ["//armorstand:__subpackages__"],
)

expand_template(
    name = "mod_info",
    out = "ModInfo.kt",
    substitutions = {
        "${mod_id}": "armorstand",
        "${mod_version}": armorstand_version,
        "${license}": license,
    },
    template = "ModInfoTemplate.kt",
)

kt_merge_library(
    name = "main",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ) + ["ModInfo.kt"],
    visibility = ["//armorstand:__subpackages__"],
    deps = [
        "//game/1.21.8:game_client_libraries",
        "//game/1.21.8:game_server_named",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
    ],
)
