load("//armorstand:properties.bzl", "armorstand_version", "home_page", "issue_tracker", "license", "sources_page")
load("//rule:merge_library.bzl", "kt_merge_library", "merge_library_jar")
load("//rule/neoforge:mod_toml_jar.bzl", "neoforge_mod_toml_jar")

neoforge_mod_toml_jar(
    name = "neoforge_mod_toml",
    src = "resources/META-INF/neoforge.mods.toml",
    resource_strip_prefix = "armorstand/neoforge_client",
    substitutions = {
        "${version}": armorstand_version,
        "${game_version}": "1.21.8",
        "${neoforge_version}": "21.8.36",
        "${license}": license,
        "${home_page}": home_page,
        "${sources_page}": sources_page,
        "${issue_tracker}": issue_tracker,
    },
)

kt_merge_library(
    name = "neoforge",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    actual = True,
    associates = [
        "//armorstand/main",
    ],
    merge_deps = [
        "//armorstand/client",
        "//armorstand/neoforge_main:neoforge_main_unmapped",
    ],
    resource_jars = [
        ":neoforge_mod_toml",
        "//armorstand/game:access_transformer",
        "//armorstand/main:main_resources",
        "//armorstand/client:client_resources",
    ],
    resource_strip_prefix = "armorstand/neoforge/resources",
    resources = glob(
        include = ["resources/**"],
        allow_empty = True,
        exclude = ["resources/META-INF/neoforge.mods.toml"],
    ),
    visibility = ["//armorstand:__subpackages__"],
    deps = [
        "//blazerod/model/model-formats",
        "//blazerod/render/api/event",
        "//game/1.21.8:game_client_libraries",
        "//game/1.21.8:game_client_neoforge",
        "@iris_neoforge_1_21_6//:primary",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@neoforge_1_21_8//:neoforge_deps",
        "@sodium_neoforge_1_21_6//:primary",
    ],
)

merge_library_jar(
    name = "neoforge_merged",
    visibility = ["//armorstand:__subpackages__"],
    deps = [":neoforge"],
)
