load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "neoforge_main_unmapped",
    srcs = glob(
        include = [
            "kotlin/**/*.kt",
            "java/**/*.java",
        ],
        allow_empty = True,
    ),
    merge_deps = [
        "//armorstand/main",
    ],
    resource_strip_prefix = "armorstand/neoforge/resources",
    resources = glob(
        include = ["resources/**"],
        allow_empty = True,
    ),
    visibility = ["//armorstand:__subpackages__"],
    deps = [
        "//game/1.21.8:game_client_neoforge",
        "//game/1.21.8:game_client_libraries",
        "@maven//:org_jetbrains_kotlinx_kotlinx_coroutines_core_jvm",
        "@neoforge_1_21_8//:net_neoforged_fancymodloader_loader",
        "@neoforge_1_21_8//:net_neoforged_bus",
    ],
)
