load("//blazerod:properties.bzl", "blazerod_version")
load("//rule:maven_publish.bzl", "maven_publish")
load("//rule:remap_jar.bzl", "remap_jar")

alias(
    name = "render_fabric_unmapped",
    actual = "//blazerod/render/versions/1.21.8/fabric:fabric_unmapped",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_fabric_unmapped_merged",
    actual = "//blazerod/render/versions/1.21.8/fabric:fabric_unmapped_merged",
    visibility = ["//visibility:public"],
)

remap_jar(
    name = "render_fabric_merged",
    classpath = ["//game/1.21.8:game_client_named"],
    from_namespace = "named",
    inputs = [":render_fabric_unmapped_merged"],
    mapping = "//game/1.21.8:game_merged_mapping",
    mixin = True,
    to_namespace = "intermediary",
    visibility = ["//visibility:public"],
)

maven_publish(
    name = "render_fabric.publish",
    src = ":render_fabric_merged",
    artifacts = {
        "sources": "//blazerod/render/versions/1.21.8/fabric:fabric_unmapped_merged_sources",
    },
    coordinates = "top.fifthlight.blazerod:render-fabric:%s" % blazerod_version,
    deps = [
        "//blazerod/model/model-base",
        "@maven//:org_joml_joml",
        "@maven//:org_slf4j_slf4j_api",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_language_kotlin",
    ],
)

alias(
    name = "render_main",
    actual = "//blazerod/render/versions/1.21.8/runtime",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_neoforge",
    actual = "//blazerod/render/versions/1.21.8/neoforge:neoforge",
    visibility = ["//visibility:public"],
)

alias(
    name = "render_neoforge_merged",
    actual = "//blazerod/render/versions/1.21.8/neoforge:neoforge_merged",
    visibility = ["//visibility:public"],
)

test_suite(
    name = "test",
    tests = [
        "//blazerod/render/common/layout/test",
        "//blazerod/render/versions/1.21.8/runtime/test",
    ],
)
